# NXPCup

./: .gitignore  CMakeLists.txt  README.md  functions.cmake
core/: CMakeLists.txt  HAL_gpio.hpp  HAL_uart.hpp  HALina.hpp  HALina_adc.hpp  HALina_display.hpp  HALina_gpio.hpp  HALina_kitty.hpp  HALina_led_line.hpp  HALina_motor.hpp  HALina_pwm.hpp  HALina_servo.hpp  HALina_switches.hpp  HALina_uart.hpp  HALinia_DMA.h  LEDLine.h  LEDLine.hpp  frog.h  hal.h  hal.hpp  kitty.h  kitty.hpp  uart.h
core/command_terminal/: Command.h  command_manager.h  cyclicBuffer.hpp
core/logger/: CMakeLists.txt  logger.cpp  logger.h
core/terminal/: CMakeLists.txt  terminal.cpp  terminal.h
firmware/car/: .clang-format.config  .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  code_formatting.cmake  functions.cmake
firmware/car/MKV/: MKV58F1M0xxx24.ld  mkv.cmake  openocd.cfg
firmware/car/MKV/CMSIS/: CMSIS.cmake
firmware/car/MKV/MKV_HAL/: MKV_DMA.cpp  MKV_DMA.h  MKV_Kitty.cpp  MKV_Kitty.hpp  MKV_PIT.cpp  MKV_PIT.hpp  MKV_adc.cpp  MKV_adc.hpp  MKV_camera.cpp  MKV_camera.hpp  MKV_display.cpp  MKV_display.hpp  MKV_frame.hpp  MKV_gpio.cpp  MKV_gpio.hpp  MKV_hal.cmake  MKV_menu.cpp  MKV_menu.hpp  MKV_motor.cpp  MKV_motor.hpp  MKV_pwm.cpp  MKV_pwm.hpp  MKV_servo.cpp  MKV_servo.hpp  MKV_uart.cpp  MKV_uart.hpp
firmware/car/MKV/board/: pin_mux.c
firmware/car/MKV/debug_module/: logger.h  printf.h
firmware/car/MKV/drivers/: drivers.cmake  fsl_rcm.h
firmware/car/MKV/source/: algorithm.cpp  algorithm.hpp  main.cpp  notes.txt
firmware/car/MKV/tests/: CMakeLists.txt  requirements.cmake
firmware/car/core/: CMakeLists.txt  HALina.hpp  HALina_adc.hpp  HALina_servo.hpp  HALina_uart.hpp
firmware/car/core/command_terminal/: CMakeLists.txt  Command.h  argumets_parser.cpp
firmware/car/etc_my_notes/: main.cpp
firmware/car/halina/: CMakeLists.txt  HALina.hpp  HALina_buttons.hpp  HALina_display.hpp  HALina_gpio.hpp  HALina_motor.hpp  HALina_uart.hpp  core.cmake  state_machine.hpp
firmware/car/halina/command_terminal/: Command.h  command_manager.h  cyclicBuffer.hpp
firmware/car/jlink/: flash.jlink.template
firmware/car/targets/KLZ/: .cproject  MKL25Z128xxx4_Project.mex  settings.cmake  target.cmake  toolchain.cmake
firmware/car/targets/KLZ/CMSIS/: CMSIS.cmake  MKL25Z4.h
firmware/car/targets/KLZ/NXP_hal/: NXP_I2C.cpp  NXP_Kitty.cpp  NXP_Kitty.hpp  NXP_algorithm.cpp  NXP_frame.hpp  NXP_gpio.hpp  NXP_hal.cmake  NXP_sensors.cpp  NXP_sensors.hpp  NXP_uart.cpp  NXP_uart.hpp  TCA95x5.cpp  TCA95x5.h  VL53L0X.cpp  VL53L0X.h  logger.h
firmware/car/targets/KLZ/board/: board.cmake  pin_mux.c
firmware/car/targets/KLZ/source/: algorithm.cpp  semihost_hardfault.c
firmware/car/targets/LPC/: CMakeLists.txt  settings.cmake
firmware/car/targets/LPC/dualcore_common/: CMakeLists.txt  Camera.hpp  HALina_ring_buffer_MB.cpp  HALina_ring_buffer_MB.hpp  IPC.h  IPC_M0.cpp  IPC_M4.cpp  NXP_CGU.hpp  NXP_GPIO.hpp  NXP_SCU.hpp  NXP_TIMER.cpp  NXP_TIMER.hpp  NXP_UART_M4.cpp  NXP_UART_M4.hpp  PIXY.h  settings_MB.c  static_circular_deque.h
firmware/car/targets/LPC/lpc_board_ngx_xplorer_4330/: CMakeLists.txt
firmware/car/targets/LPC/lpc_board_ngx_xplorer_4330_m0/: CMakeLists.txt
firmware/car/targets/LPC/lpc_chip_43xx/: CMakeLists.txt
firmware/car/targets/LPC/lpc_chip_43xx_m0/: CMakeLists.txt
firmware/car/targets/LPC/m0/: CMakeLists.txt  m0_Debug.ld  main.c  sysinit.c
firmware/car/targets/LPC/m4/: CMakeLists.txt  m4_Debug.ld  main.c
firmware/car/targets/MKV/: CMakeLists.txt  openocd.cfg  target.cmake  toolchain.cmake
firmware/car/targets/MKV/NXP_hal/: NXP_DMA.cpp  NXP_DMA.h  NXP_I2C.cpp  NXP_Kitty.cpp  NXP_Kitty.hpp  NXP_PIT.cpp  NXP_PIT.hpp  NXP_adc.cpp  NXP_adc.hpp  NXP_camera.cpp  NXP_camera.hpp  NXP_display.hpp  NXP_encoder.hpp  NXP_frame.hpp  NXP_gpio.cpp  NXP_gpio.hpp  NXP_hal.cmake  NXP_menu.cpp  NXP_menu.hpp  NXP_motor.cpp  NXP_motor.hpp  NXP_pixy.cpp  NXP_pixy.hpp  NXP_pwm.cpp  NXP_pwm.hpp  NXP_servo.cpp  NXP_servo.hpp  NXP_uart.cpp  VL53L0X.cpp  VL53L0X.h
firmware/car/targets/MKV/algorithms/: algorithm.cpp  algorithm.hpp  pid.cpp  (+9 more)
firmware/car/targets/x86/: CMakeLists.txt  settings.cmake
software/mpga/: CMakeLists.txt  mpga_en_GB.ts
software/mpga/inc/: connectevent.h  mainwindow.h
software/mpga/src/: connectevent.cpp  mainwindow.cpp  mainwindow.ui  usblink.cpp
targets/KLZ/: CMakeLists.txt  MKL25Z128xxx4_Project_Release.ld  settings.cmake
targets/KLZ/NXP_hal/: NXP_I2C.hpp  NXP_Kitty.cpp  NXP_Kitty.hpp  NXP_gpio.cpp  NXP_gpio.hpp  NXP_uart.cpp  VL53L0X.cpp
targets/KLZ/board/: board.c  clock_config.c  pin_mux.c  pin_mux.h
targets/KLZ/debug_module/: logger.cpp  ring_buffer.h
targets/KLZ/drivers/: fsl_common.c
targets/KLZ/source/: algorithm.h  main.cpp
targets/arm/: .cproject  CMakeLists.txt  HALina_config.hpp  README.md  settings.cmake
targets/arm/NXP_hal/: HALina_commands.hpp  HALina_config.hpp  HALinca_commands.cpp  NXP_DMA.cpp  NXP_DMA.h  NXP_I2C.cpp  NXP_I2C.hpp  NXP_Kitty.cpp  NXP_Kitty.hpp  NXP_PIT.cpp  NXP_PIT.hpp  NXP_Servo.cpp  NXP_adc.cpp  NXP_adc.hpp  NXP_camera.cpp  NXP_camera.hpp  NXP_display.cpp  NXP_display.hpp  NXP_gpio.cpp  NXP_gpio.hpp  NXP_hal.h  NXP_hal.hpp  NXP_menu.cpp  NXP_menu.hpp  NXP_motor.cpp  NXP_motor.hpp  NXP_pwm.cpp  NXP_pwm.hpp  NXP_servo.cpp  NXP_servo.hpp  NXP_uart.cpp  NXP_uart.hpp  VL53L0X.cpp  VL53L0X.h
targets/arm/NXP_vl53l0x/: Adafruit_VL53L0X.cpp  Adafruit_VL53L0X.h  VL53L0X.cpp  VL53L0X.h  i2c.hpp  vl53l0x_i2c_comms.cpp  vl53l0x_platform.cpp
targets/arm/algorithms/: algorithm_unit.cpp  algorithm_unit.hpp  patterns_detector.cpp  patterns_detector.hpp  track_lines_detector.cpp  track_lines_detector.hpp
targets/arm/board/: clock_config.c  clock_config.h  pin_mux.c
targets/arm/debug_module/: logger.cpp  printf.c  ring_buffer.c
targets/arm/drivers/: fsl_i2c.c  fsl_rcm.h
targets/arm/source/: MKV58F1M0xxx24_Project.cpp  commandManager.cpp  commandManager.h  main.cpp
targets/arm/vl53l0x/: vl53l0x_api.cpp  vl53l0x_api_core.cpp  vl53l0x_api_ranging.cpp  vl53l0x_api_strings.cpp  vl53l0x_i2c_platform.h  vl53l0x_platform.h
(+306 files in other folders)
